--- a/gb/21/7/27/n13117899.md
+++ b/gb/21/7/27/n13117899.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kgzahq3256/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kgzahq3256/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kgzahq3256/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kgzahq3256/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kgzahq3256/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kgzahq3256/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kgzahq3256/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kgzahq3256/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kgzahq3256/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kgzahq3256/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kgzahq3256/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kgzahq3256/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kgzahq3256/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kgzahq3256/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kgzahq3256/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kgzahq3256/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kgzahq3256/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kgzahq3256/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kgzahq3256/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kgzahq3256/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kgzahq3256/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kgzahq3256/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kgzahq3256/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kgzahq3256/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kgzahq3256/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kgzahq3256/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kgzahq3256/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kgzahq3256/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kgzahq3256/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kgzahq3256/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kgzahq3256/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kgzahq3256/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kgzahq3256/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kgzahq3256/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kgzahq3256/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kgzahq3256/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kgzahq3256/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kgzahq3256/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kgzahq3256/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kgzahq3256/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kgzahq3256/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kgzahq3256/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kgzahq3256/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kgzahq3256/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kgzahq3256/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kgzahq3256/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kgzahq3256/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>BTS忧难回报粉丝喜爱 任UN特使“沉重又开心”</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/07/id13118056-200127014703100707-600x400.jpg" />
 <h6>防弹少年团（BTS）出席第62届葛莱美奖红毯照。(Emma McIntyre/Getty Images for The Recording Academy)
 </h6>
 <hr>
-	<p>【大纪元2021年07月27日讯】（大纪元记者朝蓉编译报导）韩国人气男团<ahref="https://github.com/kgzahq3256/djy/blob/master/gb/tag/%E9%98%B2%E5%BC%B9%E5%B0%91%E5%B9%B4%E5%9B%A2.md#1">防弹少年团</a>（BTS）于24日登上韩国SBS《8点新闻（8NEWS）》接受采访。其中，他们多次表达了对粉丝的感谢之意，也谈及近日受任联合国（United Nations，简称UN）“未来世代与文化的（韩国）总统特别大使”的心情及使命感。</p>
-<p>在44分钟的完整版节目（<span style="color: #0000ff;"><a style="color: #0000ff;" href="https://www.youtube.com/watch?v=p1d3aaDGtL4" target="_blank" rel="noopener noreferrer">点看</a></span>）中，主持人表示很好奇SUGA（闵玧其）的“预言能力”，似乎他提过的事情都会成真。SUGA笑说，虽然自己的“预言”常常能实现，但好像仅限于<ahref="https://github.com/kgzahq3256/djy/blob/master/gb/tag/%E9%98%B2%E5%BC%B9%E5%B0%91%E5%B9%B4%E5%9B%A2.md#1">防弹少年团</a>自身相关的事情，例如他曾经梦到猪，买了彩券却没有中奖。</p>
+	<p>【大纪元2021年07月27日讯】（大纪元记者朝蓉编译报导）韩国人气男团<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%98%B2%E5%BC%B9%E5%B0%91%E5%B9%B4%E5%9B%A2.md#1">防弹少年团</a>（BTS）于24日登上韩国SBS《8点新闻（8NEWS）》接受采访。其中，他们多次表达了对粉丝的感谢之意，也谈及近日受任联合国（United Nations，简称UN）“未来世代与文化的（韩国）总统特别大使”的心情及使命感。</p>
+<p>在44分钟的完整版节目（<span style="color: #0000ff;"><a style="color: #0000ff;" href="https://www.youtube.com/watch?v=p1d3aaDGtL4" target="_blank" rel="noopener noreferrer">点看</a></span>）中，主持人表示很好奇SUGA（闵玧其）的“预言能力”，似乎他提过的事情都会成真。SUGA笑说，虽然自己的“预言”常常能实现，但好像仅限于<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%98%B2%E5%BC%B9%E5%B0%91%E5%B9%B4%E5%9B%A2.md#1">防弹少年团</a>自身相关的事情，例如他曾经梦到猪，买了彩券却没有中奖。</p>
 <p>而目前SUGA的“预言”中还有“获得葛莱美奖（Grammy Awards）”未实现，对此SUGA表示，他很希望防弹少年团能再次入围，想再去挑战一次，也很想得奖。</p>
 <p>谈及新歌《Permission to Dance》，RM（金南俊）表示，歌名所述“（获得）跳舞许可”的概念，很符合此刻人们无法相聚、生活上有许多限制的时期。他说，防弹少年团是“活在当下”的团体，所以像是《Dynamite》、《Butter》、《Life Goes On》及《Permission to Dance》这些歌曲，都饱含了成员们当下的感受和情绪，他相信只有表达出他们的真心，才能让听众感同身受。</p>
 <p>主持人询问JIMIN（朴智旻）于19日上传“在健身房行大礼、祈求大家幸福”照片的背后故事。JIMIN笑道，这是他运动到一半，临时请旁边的哥哥帮忙拍的。当天防弹少年团接获新歌《Permission to Dance》空降美国告示牌（Billboard）“Hot 100”榜冠军的消息，他们成功以自身的歌曲接棒《Butter》、连续第八周拿下“Hot 100”榜冠军之位。</p>
@@ -25,41 +25,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/kgzahq3256/djy/blob/master/gb/21/6/30/n13057318.md#1">BTS忍睡意开直播谢粉丝 谈7月新歌值得期待</a></li>
-<li><a href="https://github.com/kgzahq3256/djy/blob/master/gb/21/7/20/n13101060.md#1">SUGA透露肩膀状况 称复健是“跟自己打仗”</a></li>
-<li><a href="https://github.com/kgzahq3256/djy/blob/master/gb/21/7/21/n13103450.md#1">BTS担任韩国总统特别大使 将出席联合国大会</a></li>
-<li><a href="https://github.com/kgzahq3256/djy/blob/master/gb/21/7/27/n13117684.md#1">BTS《Butter》重回Hot 100榜冠军 告示牌首例</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/6/30/n13057318.md#1">BTS忍睡意开直播谢粉丝 谈7月新歌值得期待</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/7/20/n13101060.md#1">SUGA透露肩膀状况 称复健是“跟自己打仗”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/7/21/n13103450.md#1">BTS担任韩国总统特别大使 将出席联合国大会</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/7/27/n13117684.md#1">BTS《Butter》重回Hot 100榜冠军 告示牌首例</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/kgzahq3256/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/2/n10185855.md#1" target="_blank">“石油之父”惨遭灭门（下）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/6/16/n8005208.md#1" target="_blank">美肿瘤学会收录法轮功延长癌患生命论文</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/20/n10319814.md#1" target="_blank">裴毅然：重庆谈判真相——破裂主责在“共”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/7/n11240051.md#1" target="_blank">纽约州奥伯尼市长宣布5月13日法轮大法日</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/9/n13079158.md#1">【忽必烈传】马可眼中的皇帝与大元帝国</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/20/n13102389.md#1">【未解之谜】预言家凯西：我曾是亚特兰蒂斯人</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/24/n13111358.md#1">【小宇宙传说】时空穿越 他从1958来到2006年</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/12/n13083162.md#1">苏东坡一身忠直正气 自述多次与鬼神谈判</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/21/n13104808.md#1">欧阳修一生奇遇多 常怀疑自己本是世外之人</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/23/n13110635.md#1">【未解之谜】捕捉灵魂的摄影师</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/26/n13115201.md#1">【新闻大家谈】姚诚：卖命偷机密 遭卸磨杀驴</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/26/n13117257.md#1">【远见快评】疯狂围攻外媒 中共文宣失控？</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/25/n13114473.md#1">中共FC-31盗窃美国隐形战机 难匹敌F-35</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/25/n13114084.md#1">视频：郑州一辆被拖出的公交车引发质疑</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/25/n13113051.md#1">【一线采访】村民加高河堤自救 官兵毁堤泄洪</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/25/n13114539.md#1">50岁吴奇隆体能惊人 节目竞技完胜24岁男星</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/23/n13110829.md#1">《时代革命》团队宣布：影片版权已转到海外</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/24/n13111732.md#1">篠原凉子与市村正亲离婚 两儿监护权归父亲</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/24/n13111390.md#1">《恋人的最后情书》影评：相隔几十年的恋情 也能同时开花结果</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/26/n13115286.md#1">池昌旭确诊染疫隔离治疗 新戏暂停拍摄</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/21/n13105343.md#1">蔬菜别直接放冰箱！专家：这样保存最长久</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/24/n13112330.md#1">高端疫苗安全和保护力未明 专家：施打或仍有2好处</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/25/n13113232.md#1">被野熊纠缠7天 美国男子在屋顶写SOS获救</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/25/n13113601.md#1">为了保护10岁小主人 加拿大小狗被土狼咬伤</a></li>
-<li><a href="https://github.com/eeygma3264/djy/blob/master/gb/21/7/25/n13113442.md#1">球赛前突现尘卷风 众人躲 他却“风中漫步”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/31/n13342805.md#1">刷牙就能让白发变黑  这些中医处方为何历久不衰？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/29/n13339418.md#1">世界十大奇险建筑“悬空寺”的千古之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/29/n13339482.md#1">【未解之谜】寻找转世灵童</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/1/n13346265.md#1">【百年真相】从高官到囚徒 崔月犂如何走出秦城</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/30/n13341559.md#1">【舞蹈三剑客】神韵全球巡演期间 难忘的美食回忆</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/5/n13355885.md#1">【新闻大家谈】五角大楼揭中共“最高机密”？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/5/n13356732.md#1">【秦鹏直播】马云及海底捞遇麻烦 因惹赵家人？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/5/n13356729.md#1">【古韵流芳】不计荣辱悲欢 心如砥柱刘禹锡</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/4/n13352549.md#1">【中国观察】张高丽性丑闻的结局将如何</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13351361.md#1">剧中小动作引共鸣 刘涛回应是否在工地干过活</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/4/n13352001.md#1">【一线采访】多地现抢购潮 爆发打斗场面</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13351361.md#1">剧中小动作引共鸣 刘涛回应是否在工地干过活</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/4/n13354084.md#1">顶新发型看秀气场强大 范冰冰获时尚网红大赞</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13351814.md#1">周润发与路人合照罕见露愠色 原因曝光</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13349727.md#1">谢丽金受荨麻疹之苦 为健康登山差点送命</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/4/n13354413.md#1">林青霞庆67岁生日 手上鸽子蛋巨钻抢镜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/31/n13342805.md#1">刷牙就能让白发变黑  这些中医处方为何历久不衰？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/1/n13344694.md#1">10类护眼食物大公开 吃对三餐远离眼病</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/4/n13351980.md#1">大豆原来这么好 10种豆制品 哪些营养胜一筹</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13349792.md#1">大陆小说作家自曝账号被盗 骇客竟帮忙写稿</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13350110.md#1">小白球被鳄鱼咬走 挥杆的美国男子笑歪了</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kgzahq3256/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kgzahq3256/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/7/27/n13117899.htm">BTS忧难回报粉丝喜爱 任UN特使“沉重又开心”</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/7/27/n13117899.htm">BTS忧难回报粉丝喜爱 任UN特使“沉重又开心”</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kgzahq3256/djy/blob/master/gb/21/7/27/n13117899.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kgzahq3256/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kgzahq3256/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kgzahq3256/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kgzahq3256/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kgzahq3256/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kgzahq3256/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kgzahq3256/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kgzahq3256/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kgzahq3256/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kgzahq3256/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kgzahq3256/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kgzahq3256/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kgzahq3256/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kgzahq3256/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kgzahq3256/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kgzahq3256/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kgzahq3256/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kgzahq3256/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kgzahq3256/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kgzahq3256/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kgzahq3256/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kgzahq3256/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kgzahq3256/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kgzahq3256/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kgzahq3256/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kgzahq3256/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kgzahq3256/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kgzahq3256/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kgzahq3256/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kgzahq3256/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kgzahq3256/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kgzahq3256/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kgzahq3256/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kgzahq3256/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kgzahq3256/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kgzahq3256/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kgzahq3256/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kgzahq3256/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kgzahq3256/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kgzahq3256/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kgzahq3256/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kgzahq3256/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kgzahq3256/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kgzahq3256/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kgzahq3256/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kgzahq3256/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kgzahq3256/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kgzahq3256/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/21/7/27/n13117899.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
